[WIP] Update dependencies, small optimizations